# HXPainter

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  THIRD_PARTY_NOTICES.txt  manage.sh  wine_out.txt
cmake/: HXPainter.rc.in  x86_64-w64-mingw32.cmake
resources/: hxpainter.qrc
resources/theme/: hxpainter_dark.qss
scripts/: build.ps1  build_linux.sh  build_windows.sh  deploy_windows.ps1  generate_icon.py  run.ps1  run_linux.sh  setup_linux.sh  setup_qt.ps1
src/: main.cpp
src/actions/: ActionRegistry.cpp  ActionRegistry.h
src/app/: AppPaths.cpp  AppPaths.h  IconLoader.cpp  IconLoader.h
src/brush/: BrushEngine.cpp  BrushEngine.h  BrushSettings.h  EraserEngine.cpp  EraserEngine.h  FillEngine.cpp  FillEngine.h  TextEngine.cpp  TextEngine.h
src/commands/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
src/core/: PerformanceStats.cpp  PerformanceStats.h  TabletInputEvent.h
src/document/: LayerManager.cpp  LayerManager.h
src/export/: ExportManager.cpp  ExportManager.h
src/input/: TabletInputMapper.cpp  TabletInputMapper.h
src/platform/linux/: LinuxSpecific.cpp
src/platform/win/: WinSpecific.cpp
src/render/: CanvasDocument.cpp  CanvasDocument.h  OpenGLCanvasWidget.cpp  OpenGLCanvasWidget.h
src/serialization/: ProjectSerializer.cpp  ProjectSerializer.h
src/tools/: Tool.cpp  Tool.h  ToolManager.cpp  ToolManager.h
src/ui/: AppTheme.cpp  AppTheme.h  CreateOpenHub.cpp  CreateOpenHub.h  ExportDialog.cpp  ExportDialog.h  MainWindow.cpp  MainWindow.h  TextSettingsDialog.cpp  TextSettingsDialog.h
src/ui/panels/: ToolOptionsPanel.cpp  ToolOptionsPanel.h
